# ShellWatch

./: .cursorrules  .dockerignore  .gitignore  .mcp.json  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  biome.json  codex.md  config.sample.yaml  docker-compose.hydra.yml  docker-compose.yml  drizzle.config.ts  eslint.config.js  go.mod  go.sum  hydra.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redocly.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.json
.husky/: pre-push
agent-client/: CHANGELOG.md  Makefile  README.md  go.mod  go.sum
client/: eslint.config.js  index.html  login.html  svelte.config.js  tsconfig.json  vite.config.ts
coverage/: clover.xml  coverage-final.json  index.html
design/: Design.md
docs/: architecture-diagram.md  architecture.md  deployment.md  go-backend-architecture.md  oauth-mcp.md  ssh2-fork-guide.md
drizzle/: 0000_black_terror.sql  0000_broad_gideon.sql  0000_calm_psynapse.sql  0000_clammy_scalphunter.sql  0000_concerned_eternals.sql  0000_gigantic_old_lace.sql  0000_married_energizer.sql  0000_open_molecule_man.sql  0000_redundant_magneto.sql  0000_silly_maggott.sql  0000_superb_swarm.sql  0000_thankful_black_knight.sql  0000_vengeful_major_mapleleaf.sql  0000_wandering_pete_wisdom.sql  0000_wide_magik.sql  0000_yummy_old_lace.sql  (+20 more)
pam_ssh_webauthn/: CHANGELOG.md  Cargo.toml  README.md
pam_ssh_webauthn/examples/: list_keys.rs
pam_ssh_webauthn/src/: agent.rs  keys.rs  lib.rs  webauthn.rs
pam_ssh_webauthn/tests/: webauthn_roundtrip.rs
spike/: README.md  (+3 more)
(+548 files in other folders)
