[package]
name = "pam_ssh_webauthn"
version = "0.1.0"
edition = "2021"
description = "PAM module for WebAuthn passkey-protected sudo via SSH agent forwarding"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pam-bindings = "0.1.1"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
getrandom = "0.3"
log = "0.4"
syslog = "7"

# Optional OpenSSL backend for FIPS environments
openssl = { version = "0.10", optional = true }

[dev-dependencies]
env_logger = "0.11"

[features]
native-crypto = ["dep:openssl"]
